fixed spacing of date list

--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
     position: absolute;
     display: flex;
     list-style-type: none;
-    top: 10%;
-    left: 45%;
+    top: 15%;
+    left: 51%;
     margin: 0;
     padding: 10;
     cursor: pointer;
